PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/ProcessInfo__c.object-meta.xml
<CustomObject>
    <label>제품 BOM</label>
    <nameField>
        <label>이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>