PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>활성화여부</label>
    <type>Checkbox</type>
</CustomField>