PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/IsSendTrace__c.field-meta.xml
<CustomField>
    <fullName>IsSendTrace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>시스템 필드, Traceability 시스템에 송신여부.
활성화여부가 체크가 해제가 되면 이 필드는 false로 변경됨.</description>
    <label>Traceability 송신 여부</label>
    <type>Checkbox</type>
</CustomField>