PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>모든 공정 후 생산되는 품목</description>
    <inlineHelpText>모든 공정 후 생산되는 품목</inlineHelpText>
    <label>최종품목</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipName>ProcessInfo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>