PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/TraceabilityPbaMasterId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityPbaMasterId__c</fullName>
    <externalId>true</externalId>
    <label>TraceabilityPbaMasterId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>