PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/TraceabilityProductMasterId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityProductMasterId__c</fullName>
    <externalId>true</externalId>
    <label>TraceabilityProductMasterId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>