PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Item__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>품목구분</label>
    <type>Text</type>
</CustomField>