PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TraceabilityPbaMasterId__c</columns>
    <columns>TraceabilityProductMasterId__c</columns>
    <columns>IsSendTrace__c</columns>
    <columns>Item__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
    <language>ko</language>
</ListView>