PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfo__c/listViews/Filter_Product.listView-meta.xml
<ListView>
    <fullName>Filter_Product</fullName>
    <columns>NAME</columns>
    <columns>TraceabilityPbaMasterId__c</columns>
    <columns>TraceabilityProductMasterId__c</columns>
    <columns>IsSendTrace__c</columns>
    <columns>Item__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>제품</value>
    </filters>
    <label>Filter : 제품</label>
    <language>ko</language>
</ListView>